// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.create_project.header"
    titleTemplate="%s"
  />
  <div
    className="sonarcloud page page-limited"
  >
    <div
      className="page-header"
    >
      <h1
        className="page-title"
      >
        onboarding.create_project.header
      </h1>
    </div>
    <DeferredSpinner
      timeout={100}
    />
  </div>
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.create_project.header"
    titleTemplate="%s"
  />
  <div
    className="sonarcloud page page-limited"
  >
    <div
      className="page-header"
    >
      <h1
        className="page-title"
      >
        onboarding.create_project.header
      </h1>
    </div>
    <ul
      className="flex-tabs"
    >
      <li>
        <a
          className="js-auto selected"
          href="#"
          onClick={[Function]}
        >
          onboarding.create_project.select_repositories
          <div
            className="beta-badge spacer-left"
          >
            beta
          </div>
        </a>
      </li>
      <li>
        <a
          className="js-manual"
          href="#"
          onClick={[Function]}
        >
          onboarding.create_project.create_manually
        </a>
      </li>
    </ul>
    <AutoProjectCreate
      identityProvider={
        Object {
          "backgroundColor": "blue",
          "iconPath": "icon/path",
          "key": "github",
          "name": "GitHub",
        }
      }
      onProjectCreate={[Function]}
    />
  </div>
</Fragment>
`;

exports[`should render with Manual creation only 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.create_project.header"
    titleTemplate="%s"
  />
  <div
    className="sonarcloud page page-limited"
  >
    <div
      className="page-header"
    >
      <h1
        className="page-title"
      >
        onboarding.create_project.header
      </h1>
    </div>
    <Connect(ManualProjectCreate)
      currentUser={
        Object {
          "externalProvider": "microsoft",
          "groups": Array [],
          "isLoggedIn": true,
          "login": "foo",
          "name": "Foo",
          "scmAccounts": Array [],
        }
      }
      onProjectCreate={[Function]}
    />
  </div>
</Fragment>
`;

exports[`should switch tabs 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.create_project.header"
    titleTemplate="%s"
  />
  <div
    className="sonarcloud page page-limited"
  >
    <div
      className="page-header"
    >
      <h1
        className="page-title"
      >
        onboarding.create_project.header
      </h1>
    </div>
    <ul
      className="flex-tabs"
    >
      <li>
        <a
          className="js-auto selected"
          href="#"
          onClick={[Function]}
        >
          onboarding.create_project.select_repositories
          <div
            className="beta-badge spacer-left"
          >
            beta
          </div>
        </a>
      </li>
      <li>
        <a
          className="js-manual"
          href="#"
          onClick={[Function]}
        >
          onboarding.create_project.create_manually
        </a>
      </li>
    </ul>
    <AutoProjectCreate
      identityProvider={
        Object {
          "backgroundColor": "blue",
          "iconPath": "icon/path",
          "key": "github",
          "name": "GitHub",
        }
      }
      onProjectCreate={[Function]}
    />
  </div>
</Fragment>
`;
